# kubernetes-konserver

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.reuse/: dep5
charts/konserver/: Chart.yaml  README.md  values.yaml
charts/konserver/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
konserver/: config.py  main.py  models.py  util.py
tests/: test_config.py  test_controller.py  test_models.py  test_util.py
